test/regress/coverage-value-cc-eq-type-errors.test
; Test value.cc: is_equal_to type mismatch break paths
; Exercises various break+throw paths in is_equal_to (lines 764-850)

2024/01/15 Purchase
    Expenses:Both    $50.00
    Expenses:Both    30 EUR
    Assets:Checking  $-50.00
    Assets:Savings  -30 EUR

; DATE == INTEGER error (line 769 break)
test eval "[2024/01/15] == 5" -> 1
__ERROR__
While evaluating value expression:
  ([2024/01/15] == 5)
  ^^^^^^^^^^^^^^^^^^^
While comparing equality of 2024/01/15 and 5:
Error: Cannot compare a date to an amount
end test

; BOOLEAN == AMOUNT error (line 759 break)
test eval "true == 5" -> 1
__ERROR__
While evaluating value expression:
  (true == 5)
  ^^^^^^^^^^^
While comparing equality of 1 and 5:
Error: Cannot compare a boolean to an amount
end test

; INTEGER == STRING error (line 780-782 break)
; Note: parser may convert literals, so this might be AMOUNT vs STRING
test eval "5 == \"text\"" -> 1
__ERROR__
While evaluating value expression:
  (5 == "text")
  ^^^^^^^^^^^^^
While comparing equality of 5 and text:
Error: Cannot compare an amount to a string
end test

; STRING == INTEGER error (line 835-837 break)
test eval "\"text\" == 5" -> 1
__ERROR__
While evaluating value expression:
  ("text" == 5)
  ^^^^^^^^^^^^^
While comparing equality of text and 5:
Error: Cannot compare a string to an amount
end test

; MASK == INTEGER error (line 842 break)
test eval "/food/ == 5" -> 1
__ERROR__
While evaluating value expression:
  (/food/ == 5)
  ^^^^^^^^^^^^^
While comparing equality of /food/ and 5:
Error: Cannot compare a regexp to an amount
end test

; DATETIME == AMOUNT error (line 764 break)
test eval "to_datetime(\"2024/01/15 10:00:00\") == 5" -> 1
__ERROR__
While evaluating value expression:
  (to_datetime("2024/01/15 10:00:00") == 5)
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
While comparing equality of 2024/01/15 10:00:00 and 5:
Error: Cannot compare a date/time to an amount
end test

; BALANCE == STRING error (lines 806-808 break)
; Need a multi-commodity balance to avoid single-amount optimization
test bal "Expenses:Both" --format "%(display_total == \"text\")\n" --no-total -> 1
__ERROR__
While evaluating value expression:
  (display_total == "text")
  ^^^^^^^^^^^^^^^^^^^^^^^^^
While comparing equality of $50.00
30 EUR and text:
Error: Cannot compare a balance to a string
end test
